This is my html file that was needed to upload in github

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<p>Hello World</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Structure of Website</title>
+
+</head>
+<body>
+    <h1>Lecture-4 is about Structure of Website: </h1>
+    <h3>And Semantic and Non-semantic tags</h3>
+    <hr><hr>
+    <hr>
+    <!--"div" tag is a block level element which occupies a whole block space for the data in webpage as <h1> tag and is used to group the tags and do various activites using CSS  whereas
+    "span" tag is a inline element which occupies limited space as our data takes as "input" tags and function same as "dev" tag-->
+    <!--for example-->
+    <p>This is Para tag</p>
+    <p>This is a block level element</p>
+    <em>This is em tag</em>
+    <em>This is inline element</em>
+    <em>This is used to emphasize text</em>
+    <!--Whimsical.com/wireframe == this webside is used to check the layout of the web page as a part of visualization-->
+</body>
+</html>
